[gd_scene load_steps=2 format=3 uid="uid://basn1w24fmnwa"]

[ext_resource type="Script" uid="uid://cvatmtuvuihgf" path="res://Scripts/death_menu.gd" id="1_8sm51"]

[node name="DeathCanvas" type="CanvasLayer"]
script = ExtResource("1_8sm51")

[node name="Panel" type="Panel" parent="."]
z_index = 50
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartLevelButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -27.0
offset_right = 87.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart Level"

[node name="Label" type="Label" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 572.0
offset_top = 257.0
offset_right = 641.0
offset_bottom = 280.0
text = "You Died"

[node name="BackToMenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 13.0
offset_right = 91.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Back To Menu"

[node name="ScoreLabel" type="Label" parent="Panel"]
z_index = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = 167.0
offset_right = 26.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Score: "

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="Panel/RestartLevelButton" to="." method="_on_restart_level_button_button_down"]
[connection signal="button_down" from="Panel/BackToMenuButton" to="." method="_on_back_to_menu_button_button_down"]
